[package]
name = "pylontech_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
anyhow = "1.0.69"
log = "0.4.17"
solax_can_bus = {git = "https://github.com/rand12345/solax_can_bus.git", branch = "testing"}

